--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/*Keep Brand and links inline for a better page layout  */
 .header h1 {
     display: inline-block;
     font-size: 48px;
@@ -58,7 +58,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* float right and left invert the img and text for the content section to keep users interested in reading all of them  */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -74,7 +74,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* spaces and sets margins for the aside section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,7 +85,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* gratitudes class styles the aside section */
 .gratitudes {
     margin-bottom: 32px;
     color: #ffffff;
@@ -110,7 +110,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/*  */
+
 .info img {
     max-height: 200px;
 }
@@ -119,7 +119,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* copyright layout */
 footer {
     padding: 30px;
     clear: both;
